# cedar-evaluation-engine

./: ABOUT_CEDAR.md  Cargo.toml  README.md  version.txt
examples/marketing-pipeline/: Cargo.toml  MARKETING-SAMPLE.md
examples/marketing-pipeline/policies/: marketing.cedar  marketing.cedarschema
examples/marketing-pipeline/src/: cedar_auth.rs  dynamo.rs  main.rs  models.rs  s3_writer.rs
src/: main.rs
